Fix pinned tab sizing/spacing

--- a/app/stylesheets/shell-window/chrome-tabs.less
+++ b/app/stylesheets/shell-window/chrome-tabs.less
@@ -71,7 +71,7 @@
 
     &.chrome-tab-pinned {
       .chrome-tab-favicon {
-        left: 20px;
+        left: 16px;
       }
     }
 
